[package]
name = "holochain_anchors"
version = "0.2.5"
authors = ["tomgowan", "Philip Beadle <philip.beadle@holo.host>"]
edition = "2018"
description = "A crate to help Holochain apps use the anchor pattern"
repository = "https://github.com/holochain/holochain-anchors"
documentation = "https://docs.rs/holochain-anchors"
license-file = "LICENSE"

[dependencies]
hdk = "0.0.47-alpha1"
serde_derive = "1"
futures = "=0.3.2"
futures-util = "=0.3.2"
futures-macro = "=0.3.2"
serde_json = { version = "1.0.47", features = ["preserve_order"] }
holochain_json_derive = "0.0.23"
serde = "1.0.104"
